conditions.Conditions.scala.error
Erreur de compilation :
Conditions:4: error: Boolean does not take parameters
else (estFaceMur()){
                   ^